--- a/ggoled_app/Cargo.toml
+++ b/ggoled_app/Cargo.toml
@@ -16,6 +16,9 @@ directories = "*"
 rfd = "*"
 tao = "0.34.5"
 tray-icon = { version = "0.21.3", default-features = false }
+ctrlc = { version = "3", features = ["termination"] }
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
 
 [target.'cfg(windows)'.dependencies]
 windows = { version = "0.62.2", features = ["Media_Control"] }
@@ -35,3 +38,5 @@ objc2 = "0.6"
 objc2-core-foundation = "0.3.2"
 objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSNotification", "NSOperation", "NSString", "block2"] }
 system-idle-time = "1.0.4"
+core-foundation = "0.10.1"
+core-graphics = "0.24.0"
