--- a/ggoled_app/Cargo.toml
+++ b/ggoled_app/Cargo.toml
@@ -29,6 +29,7 @@ winresource = "0.1.27"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 mpris = "2"
+system-idle-time = "1.0.4"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 auto-launch = "0.6"
